# cnki-downloader

./: .env.example  .gitignore  CLAUDE.md  README.md  Sci-Hub_downloader.py  claude_desktop_config.example.json  cnki_downloader.spec  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-18-gui-architecture-fixes.md
docs/superpowers/specs/: 2026-03-19-search-performance-design.md
scripts/: batch_search.py  build.py  cnki_browser_search.py  quick_search.py
src/cnki_downloader/: __init__.py  __main__.py  mcp_server.py
src/cnki_downloader/cli/: app.py  formatters.py
src/cnki_downloader/core/: api_probe.py  auth.py  converter.py  downloader.py  exceptions.py  export.py  library.py  oa_downloader.py  search.py  session.py
src/cnki_downloader/db/: database.py  repository.py
src/cnki_downloader/gui/: app.py  main_window.py  themes.py
src/cnki_downloader/models/: download_task.py  paper.py  search_result.py  user.py
tests/: conftest.py
tests/integration/: test_cli_integration.py  test_database_integration.py  test_export_integration.py
tests/unit/: test_api_probe.py  test_auth.py  test_browser_auth.py  test_build_script.py  test_cli_download.py  test_cli_download_en.py  test_cli_formatters.py  test_cli_search.py  test_config.py  test_converter.py  test_database.py  test_downloader.py  test_export.py  test_library.py  test_main_window.py  test_main_window_navigation.py  test_mcp_server.py  test_models.py  test_oa_downloader.py  test_search.py  test_search_view_signals.py  test_search_worker_browser.py  test_session_manager.py
(+30 files in other folders)
