[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cnki-downloader"
version = "0.1.0"
description = "知网(CNKI)文献下载器 - 搜索、下载、格式转换、文献管理"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "typer>=0.12",
    "rich>=13.0",
    "aiosqlite>=0.20",
    "keyring>=25.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.6"]
convert = ["PyMuPDF>=1.24"]
all = ["PyQt6>=6.6", "PyMuPDF>=1.24"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
gui-test = [
    "pytest-qt>=4.3",
    "PyQt6>=6.6",
]
build = ["pyinstaller>=6.0"]

[project.scripts]
cnki = "cnki_downloader.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cnki_downloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
